--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
             <input type="text" id="text-input" placeholder="메시지를 입력하세요">
             <button id="send-btn">전송</button>
         </div>
+        <button id="record-btn">🎙️ 음성 입력</button>
     </div>
 </body>
 </html>
