--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contract auto-completion chatbot</title>
+    <title>AI CONTRACT</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}" defer></script>
 </head>
 <body>
     <div class="google-container">
-        <h1>Contract auto-completion chatbot</h1>
+        <h1>AICONTRACT</h1>
+        <p class="subtitle">From spoken words to signed contracts, powered by AICONTRACT</p>
 
         <!-- 검색창 -->
         <div class="search-bar-container">
