--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contract auto-completion chatbot</title>
+        <title>AI CONTRACT</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <script>
             document.addEventListener("DOMContentLoaded", function () {
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div id="chat-container">
-            <h1>Contract auto-completion chatbot</h1>
+            <h1>AI CONTRACT</h1>
             <div id="chat-box"></div>
             <div id="user-input">
                     <textarea id="text-input" placeholder="Please enter your message"></textarea>
