반응형 디자인

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
     <div class="main-container">
         <div class="search-bar-container">
-            <input type="text" id="search-input" placeholder="Please enter the type or content of the contract" onkeypress="handleSearch(event)">
+            <input type="text" id="search-input" placeholder="Enter the contract type" onkeypress="handleSearch(event)">
             <div class="search-icons">
                 <button id="record-btn">🎤</button>
                 <span id="search-btn">🔍</span>
@@ -24,8 +24,8 @@
         </div>
 
         <div class="quick-links">
-            <button class="contract-btn" data-value="Real Estate Lease Agreement">Real Estate Lease Agreement</button>
-            <button class="contract-btn" data-value="Power of attorney">Power of attorney</button>
+            <button class="contract-btn" data-value="Real Estate Lease Agreement">Real Estate Lease</button>
+            <button class="contract-btn" data-value="Power of attorney">Power of Attorney</button>
             <button class="contract-btn" data-value="Complaint">Complaint</button>
         </div>
     </div>
