검색창 표시 내용 변경

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
     <div class="main-container">
         <div class="search-bar-container">
-            <input type="text" id="search-input" placeholder="Enter the contract type" onkeypress="handleSearch(event)">
+            <input type="text" id="search-input" placeholder="Enter the contract type or contract-related details" onkeypress="handleSearch(event)">
             <div class="search-icons">
                 <button id="record-btn">🎤</button>
                 <span id="search-btn">🔍</span>
