다운로드 버튼

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -18,6 +18,8 @@
                 <button id="send-btn" class="icon-btn">📩</button>
             </div>
         </div>
+
+        <button id="download-btn" class="download-btn" style="display: none;">📥 Download contract</button>
     </div>
 </body>
 </html>
